<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/proxeiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/calculator"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/total"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bAdd"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:text="@string/add"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bSub"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:text="@string/subtract"
        android:textSize="25sp" />

</LinearLayout>